fixed new margin position on corporates necessary due to new section headers, added scroll down element, applied new top and bottom paddings to sections, added margin between the two speaker sections on mobile

--- a/_sass/apply.scss
+++ b/_sass/apply.scss
@@ -1,5 +1,8 @@
 section.apply {
   padding: 100px 0;
+  @include media-query($medium){
+    padding: 150px 0;
+  };
   .apply__form {
     height: 80vh;
     padding: 1em;
