--- a/_sass/corporates.scss
+++ b/_sass/corporates.scss
@@ -14,9 +14,9 @@ section.corporates {
     margin: 50px 0 0;
     position: relative;
     padding-top: 25px;
+    margin: 0 -10px;
     @include media-query($medium){
       padding-top: 0;
-      margin-left: -40px;
     };
     p.title {
       font-size: .8em;
