--- a/_sass/defaults.scss
+++ b/_sass/defaults.scss
@@ -222,6 +222,138 @@ h4 {
   font-size: 20px;
   letter-spacing: -0.05;
 }
+
+
+// scroll down animation
+
+#multiple2 {
+  margin-right: 20px;
+  margin-top: 50px;
+  float: right;
+  &:after {
+    content: '';
+    clear: both;
+    display: table;
+  }
+}
+
+#multiple2 .scroll-arrow-container {
+	height: 20px;
+	width: 20px;
+	position: relative;
+}
+
+#multiple2 span {
+	position: absolute;
+	height: 4px;
+	width: 30px;
+	background-color: $red;
+}
+
+#multiple2 span.arrow-left {
+	-webkit-transform: rotate(30deg);
+	-ms-transform: rotate(30deg);
+	transform: rotate(30deg);
+	left: -17px;
+}
+
+#multiple2 span.arrow-right {
+	-webkit-transform: rotate(-30deg);
+	-ms-transform: rotate(-30deg);
+	transform: rotate(-30deg);
+	right: -17px;
+}
+
+#multiple2 .arrow1 {
+	-webkit-animation-name: multiple2_1;
+	animation-name: multiple2_1;
+	-webkit-animation-duration: 3s;
+	animation-duration: 3s;
+	-webkit-animation-iteration-count: infinite;
+	animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes multiple2_1 {
+	0% {
+		opacity: 0;
+	}
+	20% {
+		opacity: 1;
+	}
+	40% {
+		opacity: 0;
+	}
+	60% {
+		opacity: 0;
+	}
+	80% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+
+#multiple2 .arrow2 {
+	-webkit-animation-name: multiple2_2;
+	animation-name: multiple2_2;
+	-webkit-animation-duration: 3s;
+	animation-duration: 3s;
+	-webkit-animation-iteration-count: infinite;
+	animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes multiple2_2 {
+	0% {
+		opacity: 0;
+	}
+	20% {
+		opacity: 0;
+	}
+	40% {
+		opacity: 1;
+	}
+	60% {
+		opacity: 0;
+	}
+	80% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+
+#multiple2 .arrow3 {
+	-webkit-animation-name: multiple2_3;
+	animation-name: multiple2_3;
+	-webkit-animation-duration: 3s;
+	animation-duration: 3s;
+	-webkit-animation-iteration-count: infinite;
+	animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes multiple2_3 {
+	0% {
+		opacity: 0;
+	}
+	20% {
+		opacity: 0;
+	}
+	40% {
+		opacity: 0;
+	}
+	60% {
+		opacity: 1;
+	}
+	80% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+
 // import other files
 @import
   "typography_base",
